# art-of-modern-CPP-development

red_belt/: profiler.h  test_runner.h
red_belt/week_1/bad_macro/: main.cpp
red_belt/week_1/comparator_generator/: sort_by.cpp
red_belt/week_1/deque_based_on_two_vectors/: deque.h  main.cpp
red_belt/week_1/macros_log/: main.cpp
red_belt/week_1/max_elem_by_predicate/: main.cpp  test_runner.h
red_belt/week_1/paginator/: main.cpp  paginator.cpp
red_belt/week_1/table/: main.cpp  table.cpp
white_belt/week_2/: CMakeLists.txt  anagrams_main.cpp  average_temp_main.cpp  bus_stations2_main.cpp  bus_stations3_main.cpp  bus_stations_main.cpp  capitals_main.cpp  everymonths_affairs_main.cpp  factorial.cpp  is_palindrom.cpp  main.cpp  map_value_set.cpp  move_strings.cpp  palindrom_filter.cpp  queue_main.cpp  reverse.cpp  reversed.cpp  synonyms_main.cpp  uniqe_strings_main.cpp  update_if_greater.cpp
white_belt/week_3/: CMakeLists.txt  first_and_last_names1.cpp  first_and_last_names3.cpp  first_and_second_names2.cpp  incognizable.cpp  reversible_string.cpp  sort_integers_main.cpp  sort_without_register_main.cpp  sorted_strings.cpp
white_belt/week_4/: CMakeLists.txt  ensure_equal.cpp  ivertable_function.cpp  ivertable_function2.cpp  lecture_title.cpp  list_of_students_main.cpp  output_with_precision_main.cpp  rational.cpp  rational2.cpp  rational3.cpp  rational4.cpp  rational5.cpp  rational6.cpp  rational7.cpp  read_and_output_table_main.cpp  work_with_files1_main.cpp  work_with_files2_main.cpp  work_with_timeserver.cpp
white_belt/week_5(final project)/: CMakeLists.txt
(+101 files in other folders)
