cmake_minimum_required(VERSION 3.17)
project(second)

set(CMAKE_CXX_STANDARD 20)

add_executable(second main.cpp factorial.cpp is_palindrom.cpp palindrom_filter.cpp update_if_greater.cpp move_strings.cpp reverse.cpp reversed.cpp average_temp_main.cpp queue_main.cpp everymonths_affairs_main.cpp anagrams_main.cpp capitals_main.cpp bus_stations_main.cpp bus_stations2_main.cpp uniqe_strings_main.cpp map_value_set.cpp synonyms_main.cpp bus_stations3_main.cpp)