cmake_minimum_required(VERSION 3.17)
project(fourth)

set(CMAKE_CXX_STANDARD 17)

add_executable(fourth lecture_title.cpp ivertable_function.cpp ivertable_function2.cpp work_with_files1_main.cpp work_with_files2_main.cpp output_with_precision_main.cpp read_and_output_table_main.cpp list_of_students_main.cpp rational.cpp rational2.cpp rational3.cpp rational4.cpp rational5.cpp ensure_equal.cpp rational6.cpp rational7.cpp work_with_timeserver.cpp)